added quiz and translation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,36 +1,37 @@
 <resources>
-    <string name="app_name">Learn</string>
-    <string name="learn_kinyarwanda">Learn Kinyarwanda</string>
-    <string name="email">Email</string>
-    <string name="password">Password</string>
-    <string name="sign_in">Sign In</string>
-    <string name="name">Full name</string>
-    <string name="create_account">Create account</string>
-    <string name="signup">Sign up</string>
+    <string name="app_name">Ikeshamvugo</string>
+    <string name="learn_kinyarwanda">Ntibavuga Bavuga</string>
+    <string name="email">Imeli</string>
+    <string name="password">Ijambo banga</string>
+    <string name="sign_in">Injira</string>
+    <string name="name">Amazina</string>
+    <string name="create_account">Fungura Konti</string>
+    <string name="signup">Fungura Konti</string>
     <string name="greetings">Greetings</string>
-    <string name="numbers">Numbers</string>
-    <string name="colors">Colors</string>
-    <string name="upload_module_icon">Upload module icon</string>
-    <string name="level">Level</string>
-    <string name="module_name">Module name</string>
-    <string name="create_module">Create new module</string>
-    <string name="create">Create</string>
-    <string name="goto_login">Already have an account? Login</string>
-    <string name="goto_signup">Doesn\'t have an account? Signup</string>
-    <string name="learners">Learners</string>
-    <string name="levels">Levels</string>
-    <string name="modules">Modules</string>
-    <string name="logout">Logout</string>
+    <string name="numbers">Imibare</string>
+    <string name="colors">Amabara</string>
+    <string name="upload_module_icon">Shyiramo ifoto</string>
+    <string name="level">Ikiciro</string>
+    <string name="module_name">Isomo</string>
+    <string name="create_module">Isomo rishya</string>
+    <string name="create">Rema</string>
+    <string name="goto_login">Usanganywe Konti? Injira</string>
+    <string name="goto_signup">Nta konti usanganywe? Fungura</string>
+    <string name="learners">Abanyeshuri</string>
+    <string name="levels">Ibyiciro</string>
+    <string name="modules">Amasomo</string>
+    <string name="logout">Sohoka</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="add_level">Add level</string>
-    <string name="level_name">Level name</string>
-    <string name="eng_word">English word</string>
-    <string name="kiny_word">Kinyarwanda word</string>
-    <string name="new_word">Add new word to learn</string>
-    <string name="brief_explanation">Brief explanations</string>
-    <string name="upload_content">Upload content</string>
-    <string name="upload">Upload</string>
-    <string name="selected_file_name">Selected file name</string>
-    <string name="choose_file">Choose file</string>
+    <string name="add_level">Ongeramo Ikiciro</string>
+    <string name="level_name">Ikiciro</string>
+    <string name="eng_word">Ntibavuga</string>
+    <string name="kiny_word">Bavuga</string>
+    <string name="new_word">Injiza ijambo ryo kwiga</string>
+    <string name="brief_explanation">Ubusobanuro buke</string>
+    <string name="upload_content">Shyiramo ibyigwa</string>
+    <string name="upload">Ohereza</string>
+    <string name="selected_file_name">Hitamo urupapuro</string>
+    <string name="choose_file">Hitamo urupapuro</string>
+    <string name="profile">Umwirondoro</string>
 </resources>
