--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,4 +47,7 @@
     <string name="update_word">Hindura ijambo ryo kwiga</string>
     <string name="update_module">Hindura Isomo</string>
     <string name="update_level">Hindura Ikiciro</string>
+    <string name="report">Raporo</string>
+    <string name="to">To</string>
+    <string name="from">From</string>
 </resources>
